tdf#150089: not all databases know "RESTART WITH"

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit
tdf#119962 Fix autoincrement for copied table
in 2021

so use the block added in the patch only when detecting "hsql" or "firebird"
in the string returned by getDatabaseProductName put in lowercase

Change-Id: Ic35a03039e6d06846892d93d5b30186c53f24052
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137499
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit e9d046442c500c82b353d1e2e27b9adc22bf396b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137515
Reviewed-by: Lionel Mamane <lionel@mamane.lu>
Tested-by: Jenkins